kubernetes/services/base/istio/jwt-authentication-policy.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "jwt-peer-authentication"
spec:
  selector:
    matchLabels:
      app: product-composite
  mtls:
    mode: PERMISSIVE
---

apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: "jwt-request-authentication"
spec:
  selector:
    matchLabels:
      app: product-composite
  jwtRules:
  - issuer: "http://auth-server.local"
    jwksUri: "http://auth-server.hands-on.svc.cluster.local/.well-known/jwks.json"
    forwardOriginalToken: true

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: "jwt-authorization-policy"
spec:
 action: DENY
 selector:
   matchLabels:
     app: product-composite
 rules:
 - from:
   - source:
       notRequestPrincipals: ["*"]
   to:
   - operation:
       notPaths: ["/actuator/health", "/actuator/circuitbreakerevents/*"]
